tests/compile_fail/invalid_weight.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/invalid_weight.rs:4:14
  |
4 |     #[weight(1.1)]
  |              ^^^
  |              |
  |              expected `u32`, found floating-point number
  |              arguments to this function are incorrect
  |
note: function defined here
 --> tests/compile_fail/invalid_weight.rs:2:10
  |
2 | #[derive(Arbitrary, Debug, PartialEq, Clone)]
  |          -^^^^^^^^
  = note: this error originates in the derive macro `Arbitrary` (in Nightly builds, run with -Z macro-backtrace for more info)
